tests/pass/0007_print_addition.ee
fn main() {
    debugPrint(1 + 2);
}
