tests/fail/0071_bool_plus_double.ee
fn main() {
    print(true + 1.5);
}
